# stistarg

./: .gitattributes  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.rst  meta.yaml  pyproject.toml  readthedocs.yml  setup.py  setup.yaml
.github/workflows/: ci.yml  publish.yml
deprecated_c_code/: Updates  mkpkg  tas.h  tas_checkbox.c  tas_error.c  tas_error.h  tas_getirafimage.c  tas_inputhtml.c  tas_inputiraf.c  tas_locate.c  tas_main.c  tas_out.c  tas_struct.h  uncgi.c
docs/: Makefile  acq_stability.rst  conf.py  environment.yml  index.rst
stistarg/: __init__.py  _unit_tests.py  stistarg.py  test_stistarg.py  unit_tests.py
